# kosen-programming-3-final

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: lint_format.yml
src/: _global.py  cli.py  main.py
src/_types/: args.py  base.py  modifiers.py
src/modifiers/: __init__.py  amplitude.py  sine.py
