[project]
name = "final"
version = "0.1.0"
authors = [
  { name="dvtzoe", email="ohmtzoe@gmail.com" },
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "pydantic>=2.11.7",
    "scipy>=1.16.1",
]

# FIXME:Update the cli-name and the function path
[project.scripts]
final = "src.cli:main"

[dependency-groups]
dev = [
    "scipy-stubs>=1.16.1.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}
